--- a/index.html
+++ b/index.html
@@ -35,82 +35,82 @@
     </ul>
   </header>
   <main>
-    <div id="sec1">
-      <div id="sec1-text">
+    <div class="sec1">
+      <div>
         <h1> All your files in one secure location, accessible anywhere.</h1>
         <p> Fylo stores your most important files in one secure location.
           Access them wherever you need, share and collaborate with friends,
           family, and co-workers.
         </p>
         <div>
-        <input type="text" placeholder="Enter your email...">
-        <div class="btn"><a href=""> Get Started</a></div>
+          <input type="text" placeholder="Enter your email...">
+          <div class="btn"><a href=""> Get Started</a></div>
+        </div>
       </div>
-      </div>
-      <div id="sec1-img">
+      <div>
         <img src="images/illustration-1.png" alt="Illustration">
       </div>
     </div>
-    <div id="sec2-top-img">
-      
+    <div class="sec2-img">
+
     </div>
-    <div id="sec2">     
-      <div id="sec2-text">
+    <div class="sec2">
+      <div>
         <h2> Stay productive, wherever you are</h2>
         <p> Never let location be an issue when accessing your files. Fylo has you
           covered for all of your file storage needs.</p>
         <p>
           Securely share files and folders with friends, family and colleagues for
           live collaboration. No email attachments required!</p>
-        <div id="sec2-link">
+        <div>
           <a href="">See how Fylo works</a>
           <img src="images/icon-arrow.png" alt="Arrow">
           <hr>
         </div>
-        
-        <div id="testimonial">
-          ,<img src="images/icon-quotes.png" alt="Quotes">
+
+        <div class="testimonial">
+          <img src="images/icon-quotes.png" alt="Quotes">
           <p>
             Fylo has improved our team productivity by an order of magnitude. Since
             making the switch our team has become a well-oiled collaboration machine.
           </p>
-          <div id="testimonial-img">
+          <div>
+
+            <img src="images/avatar-testimonial.jpg" alt="Testimonial">
+
             <div>
-              <img src="images/avatar-testimonial.jpg" alt="Testimonial">
-            </div>
-            <div id="test-text">
               <span><b>Kyle Burton</b><br></span>
-                <span>Founder & CEO, Huddle</span>
+              <span>Founder & CEO, Huddle</span>
             </div>
           </div>
         </div>
       </div>
-      <div id="sec2-img">
+      <div>
         <img src="images/illustration-2.png" alt="Illustration">
       </div>
     </div>
-    <div id="access">
-      <div id="access-text">
+    <div class="access">
+      <div>
         <h2> Get early access today</h2>
         <p>It only takes a minute to sign up and our free starter tier is extremely generous.
           If you have any questions, our support team would be happy to help you.</p>
       </div>
-      <div id="access-input">
+      <div>
         <input type="text" placeholder="email@example.com"><br>
         <div class="btn"><a href="">Get Started For Free</a></div>
       </div>
     </div>
   </main>
   <footer>
-    <div id="footer-logo"><img src="images/logo-white.png" alt="Logo"></div>
+    <div><img src="images/logo-white.png" alt="Logo"></div>
     <div class="footer-cols">
-      <div id="col1">
-        <div class="footer-icon"><img src="images/icon-phone.svg"></div>
-        <div class="footer-text">+1-543-123-4567</div><br>
-        <div class="footer-icon"><img src="images/icon-email.svg"></div>
-        <div class="footer-text"></div>example@fylo.com<br>
+      <div>
+        <img src="images/icon-phone.png">
+        <span>+1-543-123-4567</span><br>
+        <img src="images/icon-email.png">
+        <span>example@fylo.com</span><br>
       </div>
-      <div id="col2">
+      <div>
         <ul>
           <li><a href="">About Us</a></li>
           <li><a href="">Jobs</a></li>
@@ -118,22 +118,20 @@
           <li><a href="">Blog</a></li>
         </ul>
       </div>
-      <div id="col3">
+      <div>
         <ul>
           <li><a href=""> Contact Us</a></li>
           <li><a href=""> Terms</a></li>
           <li><a href="">Privacy</a></li>
         </ul>
       </div>
-      <div id="col4">
-        <div class="social">
-          <i class="fab fa-facebook"></i>
-          <i class="fab fa-twitter"></i>
-          <i class="fab fa-instagram"></i>
-        </div>
+      <div>
+        <i class="fab fa-facebook"></i>
+        <i class="fab fa-twitter"></i>
+        <i class="fab fa-instagram"></i>
       </div>
     </div>
-    <div id="copyright">&copy; Copyright 2020 Fylo. All rights reserved.</div>
+    <div>&copy; Copyright 2020 Fylo. All rights reserved.</div>
 
   </footer>
   <p class="attribution">
