Updated files to clear accessibility errors

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           family, and co-workers.
         </p>
         <div>
-          <input type="text" placeholder="Enter your email...">
+          <input type="text" placeholder="Enter your email..." title="email">
           <div class="btn"><a href=""> Get Started</a></div>
         </div>
       </div>
@@ -96,7 +96,7 @@
           If you have any questions, our support team would be happy to help you.</p>
       </div>
       <div>
-        <input type="text" placeholder="email@example.com"><br>
+        <input type="text" placeholder="email@example.com" title="email"><br>
         <div class="btn"><a href="">Get Started For Free</a></div>
       </div>
     </div>
@@ -105,9 +105,9 @@
     <div><img src="images/logo-white.png" alt="Logo"></div>
     <div class="footer-cols">
       <div>
-        <img src="images/icon-phone.png">
+        <img src="images/icon-phone.png" alt="phone">
         <span>+1-543-123-4567</span><br>
-        <img src="images/icon-email.png">
+        <img src="images/icon-email.png" alt="email">
         <span>example@fylo.com</span><br>
       </div>
       <div>
