Added more meaningful names for classes

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </ul>
   </header>
   <main>
-    <div class="sec1">
+    <div class="intro">
       <div>
         <h1> All your files in one secure location, accessible anywhere.</h1>
         <p> Fylo stores your most important files in one secure location.
@@ -51,10 +51,10 @@
         <img src="images/illustration-1.png" alt="Illustration">
       </div>
     </div>
-    <div class="sec2-img">
+    <div class="feature-img">
 
     </div>
-    <div class="sec2">
+    <div class="features">
       <div>
         <h2> Stay productive, wherever you are</h2>
         <p> Never let location be an issue when accessing your files. Fylo has you
